k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: avatar-service
  labels:
    app: avatar-service
spec:
  selector:
    app: avatar-service
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: metrics
    port: 9090
    targetPort: metrics
