k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: avatar-service
  labels:
    app: avatar-service
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
  - host: gophprofile.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: avatar-service
            port:
              name: http
